# softloq-whatwg-encoding

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md
include/softloq/whatwg/: encoding.hpp
include/softloq/whatwg/encoding/: decoder_base.hpp  encoder_base.hpp  io_queue.hpp  io_queue.tpp  lib_macro.hpp  utf8.hpp
include/softloq/whatwg/encoding/io_queue/: base.hpp  base.tpp  immediate.hpp  immediate.tpp  item.hpp  item.tpp  stream.hpp  stream.tpp
src/encoding/: decoder_base.cpp  encoder_base.cpp
tests/: example.cpp
